--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<html lang="en" class="light-style layout-navbar-fixed layout-menu-fixed" dir="ltr" data-theme="theme-default" data-assets-path="../../assets/" data-template="vertical-menu-template-starter">
+<html lang="en" class="layout-navbar-fixed dark-style layout-menu-fixed" dir="ltr" data-theme="theme-default" data-assets-path="../../assets/" data-template="vertical-menu-template-starter">
    <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -290,8 +290,8 @@
       </style>
       <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
       <script src="../../assets/js/config.js"></script>
-      <link rel="stylesheet" type="text/css" href="../../assets/vendor/css/rtl/core.css" class="template-customizer-core-css">
-      <link rel="stylesheet" type="text/css" href="../../assets/vendor/css/rtl/theme-default.css" class="template-customizer-theme-css">
+      <link rel="stylesheet" type="text/css" href="../../assets/vendor/css/rtl/core-dark.css" class="template-customizer-core-css">
+      <link rel="stylesheet" type="text/css" href="../../assets/vendor/css/rtl/theme-default-dark.css" class="template-customizer-theme-css">
    </head>
    <body>
       <!-- Layout wrapper -->
@@ -352,7 +352,7 @@
                   <div class="navbar-nav-right d-flex align-items-center" id="navbar-collapse">
                      <div class="navbar-nav align-items-center">
                         <a class="nav-link style-switcher-toggle hide-arrow" href="javascript:void(0);">
-                        <i class="ti ti-sm ti-moon-stars"></i>
+                        <i class="ti ti-sm ti-sun"></i>
                         </a>
                      </div>
                      <ul class="navbar-nav flex-row align-items-center ms-auto">
@@ -498,7 +498,7 @@
                      </div>
                   </div>
                </div>
-               <div class="m-0 px-4 pb-3 pt-1 template-customizer-style w-100"> <label for="customizerStyle" class="form-label d-block template-customizer-t-style_label">Style (Mode)</label> <label class="switch switch-sm"> <span class="switch-label template-customizer-t-style_switch_light">Light</span> <input type="checkbox" class="switch-input"> <span class="switch-toggle-slider"> <span class="switch-on"></span> <span class="switch-off"></span> </span> <span class="switch-label template-customizer-t-style_switch_dark">Dark</span> </label> </div>
+               <div class="m-0 px-4 pb-3 pt-1 template-customizer-style w-100"> <label for="customizerStyle" class="form-label d-block template-customizer-t-style_label">Style (Mode)</label> <label class="switch switch-sm"> <span class="switch-label template-customizer-t-style_switch_light">Light</span> <input type="checkbox" class="switch-input" checked="checked"> <span class="switch-toggle-slider"> <span class="switch-on"></span> <span class="switch-off"></span> </span> <span class="switch-label template-customizer-t-style_switch_dark">Dark</span> </label> </div>
             </div>
             <div class="template-customizer-layout">
                <hr class="m-0">
